--- a/redbitsite/package.json
+++ b/redbitsite/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-axios": "^2.1.5",
     "vue-pdf": "^4.1.0",
     "vue-router": "^3.4.5",
