--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ACCESS_TOKEN: ${{ secrets.TOKEN_REDBIT }}
-          BRANCH: main
+          BRANCH: master
           FOLDER: redbitsite/dist
           REPOSITORY_NAME: RedBita/redbita.github.io
